--- a/uda/index.html
+++ b/uda/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="3D Moments from Near-Duplicate Photos">
-  <meta name="keywords" content="3D Moments, view synthesis">
+        content="UADA3D">
+  <meta name="keywords" content="UADA3D">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>3D Moments from Near-Duplicate Photos</title>
+  <title>UADA3D: Unsupervised Adversarial Domain Adaptation for 3D Object Detection with Sparse LiDAR and Large Domain Gaps</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
