--- a/uda/index.html
+++ b/uda/index.html
@@ -80,7 +80,7 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="static/pdfs/3d_moments.pdf"
+                <a href="https://arxiv.org/pdf/2403.17633"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -108,7 +108,7 @@
                 </a>
               </span> -->
               <!-- Supp Link. -->
-              <span class="link-block">
+              <!-- <span class="link-block">
                 <a href="static/pdfs/supp.pdf"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
@@ -116,7 +116,7 @@
                   </span>
                   <span>Supp</span>
                 </a>
-              </span>
+              </span> -->
               <!-- Code Link. -->
               <span class="link-block">
                 <a href="https://github.com/maxiuw/UADA3D"
