--- a/uda/index.html
+++ b/uda/index.html
@@ -83,7 +83,7 @@
                 <a href="https://arxiv.org/pdf/2403.17633"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
-                      <i class="fas fa-file-pdf"></i>
+                      <i class="ai ai-arxiv"></i>
                   </span>
                   <span>Paper</span>
                 </a>
@@ -108,15 +108,15 @@
                 </a>
               </span> -->
               <!-- Supp Link. -->
-              <!-- <span class="link-block">
-                <a href="static/pdfs/supp.pdf"
+              <span class="link-block">
+                <a href="https://kth-my.sharepoint.com/:f:/g/personal/maciejw_ug_kth_se/EqGk-27mGU5JkJOp1sm2bIABHrBS27HZMssBV61phyACrw?e=ebOt6e"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
-                      <i class="fas fa-file-pdf"></i>
+                      <i class="fas fa fa-cloud"></i>
                   </span>
-                  <span>Supp</span>
+                  <span>Data and models</span>
                 </a>
-              </span> -->
+              </span>
               <!-- Code Link. -->
               <span class="link-block">
                 <a href="https://github.com/maxiuw/UADA3D"
@@ -569,7 +569,7 @@ achieved these results using only 20 labeled target examples for this few-shot a
   <div class="container is-max-desktop">
 
   <div class="columns is-centered has-text-centered">
-    <h1 class="title is-3"> Qualitative results - small objects and pedestrians</h1>
+    <h1 class="title is-3"> Qualitative results pedestrians, far away, and heavily occluded objects</h1>
   </div>
 
 <div id="wrapper" style="text-align:center;"> 
