--- a/uda/index.html
+++ b/uda/index.html
@@ -74,7 +74,7 @@
 
           </div>
 
-          <h1 style="font-size:24px;font-weight:bold">Under review</h1>
+          <h1 style="font-size:24px;font-weight:bold">Accepted for IEEE RA-L 2024</h1>
           
           <div class="column has-text-centered">
             <div class="publication-links">
